syntax = "proto3";

package ext;

option go_package = "github.com/tislib/data-handler/pkg/ext";

import 'model/query.proto';
import 'model/record.proto';

message RecordListParams {
  string namespace = 2;
  string resource = 3;
  model.BooleanExpression query = 4;
  uint32 limit = 5;
  uint64 offset = 6;
  bool useHistory = 7;
  repeated string resolveReferences = 8;
}

message RecordCreateParams {
  string namespace = 1;
  repeated model.Record records = 2;
  bool IgnoreIfExists = 3;
}

message RecordUpdateParams {
  string namespace = 1;
  repeated model.Record records = 2;
  bool checkVersion = 3;
}

message RecordDeleteParams {
  string namespace = 1;
  string resource = 2;
  repeated string ids = 3;
}